force-app/main/default/objects/ProjectCharges__c/ProjectCharges__c.object-meta.xml
<CustomObject>
    <label>Project Charges Correct</label>
    <nameField>
        <label>Project Charges  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Charges Correct</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>