force-app/main/default/objects/ProjectCharges__c/fields/Agreement_Value_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% of Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>