force-app/main/default/objects/ProjectCharges__c/fields/Calculatedas__c.field-meta.xml
<CustomField>
    <fullName>Calculatedas__c</fullName>
    <label>Calculated as</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate list at Unit level</fullName>
            </value>
            <value>
                <fullName>Percentage of Agreement Value</fullName>
            </value>
            <value>
                <fullName>Lumpsum at Project Level</fullName>
                <isActive>false</isActive>
                <label>Lumpsum at Project Level</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>