force-app/main/default/objects/ProjectCharges__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <label>CGST %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>