force-app/main/default/objects/ProjectCharges__c/fields/Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name__c</fullName>
    <label>Charge Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advance Building Maintenance Charges</fullName>
            </value>
            <value>
                <fullName>Advance Maintanence Charges for 1 Year</fullName>
            </value>
            <value>
                <fullName>Advance Maintenance Charges</fullName>
            </value>
            <value>
                <fullName>Association Formation Charges</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Campus Maintenance Corpus Fund</fullName>
            </value>
            <value>
                <fullName>Club Development Charges</fullName>
            </value>
            <value>
                <fullName>Club House Corpus fund towards Association (per unit)</fullName>
            </value>
            <value>
                <fullName>Club House Development Charges</fullName>
            </value>
            <value>
                <fullName>Condominium Entry Fees</fullName>
            </value>
            <value>
                <fullName>Corpus Fund for Building Maintenance</fullName>
            </value>
            <value>
                <fullName>Corpus Fund Subscription</fullName>
            </value>
            <value>
                <fullName>Development Charges</fullName>
            </value>
            <value>
                <fullName>Floor Rise</fullName>
            </value>
            <value>
                <fullName>Infra Cost</fullName>
            </value>
            <value>
                <fullName>Infrastructure Development Charges</fullName>
            </value>
            <value>
                <fullName>Legal Charges</fullName>
            </value>
            <value>
                <fullName>Legal Fees</fullName>
            </value>
            <value>
                <fullName>Legal Service and Documentation Charges</fullName>
            </value>
            <value>
                <fullName>One-time Club House Development Charge</fullName>
            </value>
            <value>
                <fullName>PLC</fullName>
            </value>
            <value>
                <fullName>Registrar Fees</fullName>
            </value>
            <value>
                <fullName>Registration charges</fullName>
            </value>
            <value>
                <fullName>Stamp Duty</fullName>
            </value>
            <value>
                <fullName>Water, Electricity, Drainage, Sewerage Connection</fullName>
            </value>
            <value>
                <fullName>Share Application Money Subscription</fullName>
            </value>
            <value>
                <fullName>Society Formation Charges</fullName>
            </value>
            <value>
                <fullName>Advance Maintenance Charges (For 18 months)</fullName>
            </value>
            <value>
                <fullName>Mahanagar Gas Connection Charges (MGL)</fullName>
            </value>
            <value>
                <fullName>Club house, amenities and infrastructure charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>