force-app/main/default/objects/ProjectCharges__c/fields/ChargeBucket__c.field-meta.xml
<CustomField>
    <fullName>ChargeBucket__c</fullName>
    <label>Charge Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Value</fullName>
            </value>
            <value>
                <fullName>Society Charges</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
            <value>
                <fullName>Stamp Duty and Registration</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
                <isActive>false</isActive>
                <label>Registration</label>
            </value>
            <value>
                <fullName>Stamp Dute and Registration</fullName>
                <isActive>false</isActive>
                <label>Stamp Dute and Registration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>