force-app/main/default/objects/ProjectCharges__c/fields/Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Code_Formula__c</fullName>
    <formula>VALUE(RIGHT( Code__c,(LEN( Code__c)-FIND(&quot;-&quot;, Code__c))))</formula>
    <label>Code(Formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>