force-app/main/default/objects/ProjectCharges__c/fields/Editable__c.field-meta.xml
<CustomField>
    <fullName>Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if charge is editable by the user while generating cost sheet</description>
    <label>Editable (at cost sheet Level)</label>
    <type>Checkbox</type>
</CustomField>