force-app/main/default/objects/ProjectCharges__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>