force-app/main/default/objects/ProjectCharges__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <label>SGST %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>