force-app/main/default/objects/ProjectCharges__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Project Charges Correct</relationshipLabel>
    <relationshipName>Project_Charges_Correct</relationshipName>
    <type>Lookup</type>
</CustomField>